--- a/src/main/webapp/assets/css/common.css
+++ b/src/main/webapp/assets/css/common.css
@@ -7,7 +7,7 @@
 
     --bg-color: #f4f4f4;      /* 全局背景色（浅） */
     --text-color: #222;       /* 全局文字色（浅） */
-    --card-bg: #fff;          /* 卡片背景色（浅） */
+    --card-bg: #ffffff;          /* 卡片背景色（浅） */
     --divider: #e0e0e0;       /* 分割线颜色 */
 }
 
