--- a/src/main/webapp/assets/css/common.css
+++ b/src/main/webapp/assets/css/common.css
@@ -14,7 +14,7 @@
 /* 暗黑模式：只改变量 */
 html.dark-mode {
     --bg-color: #121212;
-    --text-color: #ddd;
+    --text-color: #d2d2d2;
     --card-bg: #2d2d2d;
     --divider: #333;
 }
