--- a/src/main/webapp/assets/css/sections/tech.css
+++ b/src/main/webapp/assets/css/sections/tech.css
@@ -2,7 +2,7 @@
  * Tech Section 样式
  */
 
-@import "../variables.css";
+@import "../variables-light.css";
 @import "../utilities.css";
 @import "../layout.css";
 @import "../components/cards.css";
