--- a/src/main/webapp/assets/css/utilities.css
+++ b/src/main/webapp/assets/css/utilities.css
@@ -2,7 +2,7 @@
  * Global base typography and element styles
  */
 
-@import "variables.css"; /* Ensure CSS variables are available */
+@import "variables-light.css"; /* Ensure CSS variables are available */
 
 body {
     font-family: 'Helvetica Neue', Arial, sans-serif;
